<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item android:id="@+id/action_help"-->
<!--        android:title="@string/action_help"-->
<!--        android:icon="@drawable/ic_baseline_help_outline_24"-->
<!--        android:iconTint="@android:color/white"-->
<!--        app:showAsAction="ifRoom"/>-->

    <item android:id="@+id/action_about_app"
        android:title="@string/action_about_app"
        app:showAsAction="collapseActionView"/>

    <item android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="collapseActionView"/>

    <item android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/ic_baseline_add_48"
        android:iconTint="@android:color/white"
        app:showAsAction="always"/>
</menu>