<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/bigPadding"
    android:background="@color/background_color"
    tools:context=".activity.admin.AdminLoginActivity">

    <LinearLayout
        android:id="@+id/llLoginForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin_app_name"
            android:textSize="36sp"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username_label"
            />

        <EditText
            android:id="@+id/edtEmailAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            />
        <EditText
            android:id="@+id/edtPasswordAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btnLoginAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_label"
            />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/secondary_primary"
            />

        <TextView
            android:id="@+id/tvLoginError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credential_is_invalid"
            android:textColor="@android:color/holo_red_dark"
            android:visibility="gone"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>