<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/bigPadding"
    tools:context=".activity.ConsultationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_consult_title"
        />
    <EditText
        android:id="@+id/edtConsultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/bigPadding"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_consult_vehicle"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/smallPadding"/>
    <Spinner
        android:id="@+id/spinnerConsultVehicle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/bigPadding"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_description"
        />

    <EditText
        android:id="@+id/edtConsultDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="5"
        android:lines="6"
        android:inputType="textMultiLine"
        android:gravity="top|start"
        android:scrollbars="vertical"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/bigPadding"/>

    <Button
        android:id="@+id/btnSendConsult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_consultation"
        />

</LinearLayout>