<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/mediumPadding"
    android:orientation="vertical"
    tools:context=".activity.admin.AdminAddEditProductActivity">

    <ProgressBar
        android:id="@+id/pbLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:id="@+id/llProductDetail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            />
        <EditText
            android:id="@+id/edtProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_price"
            />
        <EditText
            android:id="@+id/edtProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_description"
            />
        <EditText
            android:id="@+id/edtProductDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:maxLines="5"
            android:inputType="textMultiLine"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_stock"
            />
        <EditText
            android:id="@+id/edtProductStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            >

            <ImageView
                android:id="@+id/imgProductImage"
                android:layout_width="100dp"
                android:layout_height="100dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="@dimen/mediumPadding"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_image"
                    />
                <EditText
                    android:id="@+id/edtProductImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    />

                <Button
                    android:id="@+id/btnLoadImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/load_image_label"
                    />
            </LinearLayout>

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>

        <com.kusu.loadingbutton.LoadingButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_submit"
            android:backgroundTint="@color/secondary_primary"
            app:lb_shadowColor="@color/black"
            app:lb_shadowHeight="5dp"
            app:lb_isShadowEnable="true"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>